raw/NAILUL MURODZ MUHAMMAD 6400 245150201111033/2024-11-14-08-01-05.ceg/compilation.txt
NT.java:43: error: illegal start of expression
    private double angkaAwal;
    ^
NT.java:108: error: class, interface, enum, or record expected
    }
    ^
2 errors
Not compiled
